--- a/Security Playbook/3. Nominate Champions.md
+++ b/Security Playbook/3. Nominate Champions.md
@@ -10,9 +10,15 @@ time Champion would spend on the security tasks - 20% should be enough for the b
 Once the approvals are obtained, the next step would be to identify potential Champions.
 Sit down together with team manager, select the candidates and conduct mini-interviews
 with each of them. Remember - it's not _appointing_ but nominating! Describe the role,
-expectations and strategy, and show them personal benefits of becoming a Champion - such
-as self-development and increase of his value on the market, improving quality of the product,
-attending security conferences and becoming an important part of the security meta-team. In the worst case scenario, ask team manager for help to find one - although hopefully
+expectations and strategy, and show them personal benefits of becoming a Champion:
+* self-development and ability to look at things differently
+* increase of his/her value on the market
+* improving quality of the product
+* attending security conferences
+* becoming an important part of the security meta-team
+* having fun :)
+
+In the worst case scenario, ask team manager for help to find one - although hopefully
 you'll get the Champion right after the first presentation.
 
 Final step here would be official nomination - add him to the meta security team page,
