Update link to OWASP SAMM

--- a/Security Playbook/2. Define the role.md
+++ b/Security Playbook/2. Define the role.md
@@ -1,7 +1,7 @@
 # 2. Define the role
 Main objective of this step is to come up with tangible goals, and to prepare clear
 role descriptions for future Security Champions. While measuring current security state in
- teams is partially done on the previous step, detailed description of building a global AppSec security strategy is rather beyond this playbook - please refer to existing frameworks such as [OpenSAMM](http://www.opensamm.org), which provides a simple and straightforward way to achieve this.
+ teams is partially done on the previous step, detailed description of building a global AppSec security strategy is rather beyond this playbook - please refer to existing frameworks such as [OWASP SAMM](https://owaspsamm.org/), which provides a simple and straightforward way to achieve this.
 
 Having your AppSec program and global goals defined, it's crucial to distinguish activities matching Security Champions the most, and map them onto these goals. Depending on the current state of security in your organization, that could include some or all of the below:
 - conduct and/or verify security reviews in the team
