Add Onboarding Routine section

--- a/Security Playbook/3. Nominate Champions.md
+++ b/Security Playbook/3. Nominate Champions.md
@@ -23,8 +23,18 @@ you'll get the Champion right after the first presentation.
 
 Final step here would be official nomination - add him to the meta security team page,
 replacing interim "security contact" with "Security Champion"
+
 (see [Phase 1](1.%20Identify%20teams.md)), think of some sort "insignia" like [mugs](https://raw.githubusercontent.com/DinisCruz/Book_SecDevOps_Risk_Workflow/bb919b1d48243743bb94e2a6708dba8ad4f3e249/content/2.Risk-workflow/Security-champions/If-you-dont-have-an-sc-get-a-mug/images/Security-champion-mug.jpg), and
 introduce the novice to the others.
+
+## 3.1 Onboarding process
+Great job nominating your Champions! As the program evolves and Champions come and go, it is important to establish an onboarding routine. Common steps are:
+* Introduce newbies to the other champions
+* Communicate new joiners company-wide
+* Add them to all [communication channels](4.%20Set%20up%20communication%20channels.md)
+* Introduce the [knowledge base](5.%20Build%20solid%20knowledge%20base.md) and include them in the training cycles
+* Assign the first task
+* Have periodic 1:1s
 
 [<< Previous page](2.%20Define%20the%20role.md) | [Main page](../README.md) | [Next page >>](4.%20Set%20up%20communication%20channels.md)
 | --- | --- | --- |
