Add more insights on comms

--- a/Security Playbook/4. Set up communication channels.md
+++ b/Security Playbook/4. Set up communication channels.md
@@ -9,12 +9,16 @@ following:
 - Skype group chats
 - Yammer groups
 - mailing lists
+- Google Forms
 
 The more the better, really - just make sure there is an easy way to spread
 important information and get feedback. Additionally, set up periodic sync ups
 to see how things are going, and to adjust short-term goals together. For the
 beginning, bi-weekly meetings should do fine.
 
+Don't be afraid to share the results and achievements of the group organization-wide. Also, checking in through  1:1s might work better for some people and allow you to get more in-depth feedback on specific Champions or situations.
+
+As a side note, make sure the environment communications are non-toxic and that all Champions feel safe to voice their questions, concerns, and proposals.
 
 [<< Previous page](3.%20Nominate%20Champions.md) | [Main page](../README.md) | [Next page >>](5.%20Build%20solid%20knowledge%20base.md)
 | --- | --- | --- |
