Add suggestion for recoreded videos

--- a/Security Playbook/5. Build solid knowledge base.md
+++ b/Security Playbook/5. Build solid knowledge base.md
@@ -39,7 +39,8 @@ The topics to be discussed should be cherrypicked according to the definition of
 - Incident Response
 - Internal policies and procedures
 
-The training sessions should be short and provide pointers to a curated list of in-depth resources as well as illustrate each topic with real examples from the organization.
+The training sessions should be short and provide pointers to a curated list of in-depth resources as well as illustrate each topic with real examples from the organization. Recording videos on exploring previous issues might complement the theory presented.
+
 Along with training that provides technical knowledge, it is recommended to clarify and document internal processes where Sec Ch are expected to play significant roles. For instance, Vulnerability Management, Incident Handling, tools recommended (i.e. SAST, DAST, SCA, security plugins, etc), and On-call procedures.
 
 Subjects that are only specific to a certain subset of the Sec Ch (i.e. platform-specific security practices) might be approached after the core topics have been covered. Champions should be fostered to proactively research and present topics that relate to their main areas of expertise. Example of platform-specific topics:
