Add section on tournaments and contests

--- a/Security Playbook/6. Maintain interest.md
+++ b/Security Playbook/6. Maintain interest.md
@@ -12,6 +12,11 @@ No matter what format you're going to choose, it's probably the most important
 point throughout the whole Playbook. Keep them motivated, and you'll be pleasantly
 surprised very soon!
 
+## Tournaments and contests
+Let Champions practice on exciting challenges through contests and hackathons. A quarterly internal CTF can be easily set up using [CTFd](https://github.com/CTFd/CTFd), or you can choose an external event from [CTF Time](https://ctftime.org/). Hacking days can also be interesting, either for finding or fixing vulnerabilities.
+Besides being useful and fun, these events can also help establishing a baseline of the maturity of the Champions. Identified weak points can be further adressed in training sessions.
+Don't underestimate the power of SWAGs to increase engagement rates!
+
 ## Regular newsletters
 Share recent security news via established communication channels (such as [Ezine weekly appsec compilations](https://github.com/Simpsonpt/AppSecEzine)). Additionally, start
 monthly security newsletters with updates from the teams, plans, recognitions for
