Update 3. Nominate Champions.md

--- a/Security Playbook/3. Nominate Champions.md
+++ b/Security Playbook/3. Nominate Champions.md
@@ -21,10 +21,8 @@ expectations and strategy, and show them personal benefits of becoming a Champio
 In the worst case scenario, ask team manager for help to find one - although hopefully
 you'll get the Champion right after the first presentation.
 
-Final step here would be official nomination - add him to the meta security team page,
-replacing interim "security contact" with "Security Champion"
-
-(see [Phase 1](1.%20Identify%20teams.md)), think of some sort "insignia" like [mugs](https://raw.githubusercontent.com/DinisCruz/Book_SecDevOps_Risk_Workflow/bb919b1d48243743bb94e2a6708dba8ad4f3e249/content/2.Risk-workflow/Security-champions/If-you-dont-have-an-sc-get-a-mug/images/Security-champion-mug.jpg), and
+Final step here would be official nomination - add them to the meta security team page,
+replacing interim "security contact" with "Security Champion" (see [Phase 1](1.%20Identify%20teams.md)), think of some sort "insignia" like [mugs](https://raw.githubusercontent.com/DinisCruz/Book_SecDevOps_Risk_Workflow/bb919b1d48243743bb94e2a6708dba8ad4f3e249/content/2.Risk-workflow/Security-champions/If-you-dont-have-an-sc-get-a-mug/images/Security-champion-mug.jpg), and
 introduce the novice to the others.
 
 ## 3.1 Onboarding process
