Minor typo fixes

--- a/Security Playbook/5. Build solid knowledge base.md
+++ b/Security Playbook/5. Build solid knowledge base.md
@@ -50,7 +50,7 @@ Subjects that are only specific to a certain subset of the Sec Ch (i.e. platform
 - Writing secure IAM policies (infra/cloud)
 
 ## 5.2 Training formats
-A strong training program might include the following components::
+A strong training program might include the following components:
 - Reference Materials from the knowledge base
 - Live sessions
 - Hands-on practice
@@ -67,7 +67,7 @@ To assure Sec Ch have enough exposure to the topics they are expected to be invo
 
 - Level 0: completed all mandatory company-wide security awareness training
 - Level 1: completed all core topic training
-- Level 2: completed all platform-specifc training
+- Level 2: completed all platform-specific training
 - Level 3: over 6 months of active experience as a champion / met established KPIs
 
 By assigning responsibilities according to different levels of maturity, one can increase accuracy and a sense of engagement. Besides, it provides a clearer vision of the maturity status of the program itself.
