update paths configs

--- a/Security Playbook_PTBR/3. Nomeando Champions.md
+++ b/Security Playbook_PTBR/3. Nomeando Champions.md
@@ -1,7 +1,7 @@
 # 3. Nomeando Champions
 Certo, agora é hora de nomear os Champions! Para passar por essa etapa com tranquilidade, você deve primeiro obter aprovações da gerência em todos os níveis - desde a alta administração até os proprietários de produtos e os gerentes das equipes. Embora essa seja uma abordagem clássica de "cima para baixo", é uma parte extremamente importante, pois garante que o pior argumento que você pode ouvir: **"Não tive tempo para a segurança"**, seja solucionado. Faça uma apresentação dos papéis definidos, benefícios para a equipe e o tempo aproximado que um Champion gastaria nas tarefas de segurança, 20% deve ser suficiente para começar.
 
-Uma vez obtidas as aprovações, o próximo passo seria identificar possíveis Champions. Sente-se junto com o gerente da equipe, selecione os candidatos e conduza mini-entrevistas com cada um deles. Lembre-se - não se trata de nomear, mas de indicar! Descreva o papel, expectativas e estratégia, e mostre a eles os benefícios pessoais de se tornar um Champions:
+Uma vez obtidas as aprovações, o próximo passo seria identificar possíveis Champions. Sente-se com o gerente da equipe, selecione os candidatos e conduza mini-entrevistas com cada um deles. Lembre-se - não se trata de nomear, mas de indicar! Descreva o papel, expectativas e estratégia, e mostre a eles os benefícios pessoais de se tornar um Champions:
 - Desenvolvimento pessoal e habilidade de enxergar as coisas de maneira diferente;
 - Aumento do seu valor no mercado;
 - Melhoria da qualidade do produto;
