--- a/Security Playbook_PTBR/6. Manter o interesse.md
+++ b/Security Playbook_PTBR/6. Manter o interesse.md
@@ -2,7 +2,7 @@
 Para ter um ecossistema contínuo e bem-sucedido de Security Champions, é crucial apoiá-los constantemente e fornecer materiais de aprendizado. Abaixo, você pode encontrar várias maneiras de manter o interesse dos Champions e ajudá-los a evoluir como profissionais de segurança.
 
 ## Workshops & treinamentos
-Realize oficinas periódicas para as equipes, explique a estratégia, promova as melhores práticas ou compartilhe notícias recentes do mundo da segurança. Organize um [quiz interativo](https://kahoot.com), anuncie a Quinta-feira do Hacker ou inicie um ["Mês de bugs"](https://owaspsummit.org/Working-Sessions/Security-Crowdsourcing/Internal-Bug-Bounties-Programmes.html). Converse com os Champions e juntos decidam qual formato é o mais adequado para vocês. Não importa qual formato você escolherá, este é provavelmente o ponto mais importante em todo o Manual. Mantenha-os motivados e você ficará agradavelmente surpreso em breve!
+Realize oficinas periódicas para as equipes, explique a estratégia, promova as melhores práticas ou compartilhe notícias recentes do mundo da segurança. Organize um [quiz interativo](https://kahoot.com), anuncie a quinta-feira do Hacker ou inicie um ["Mês de bugs"](https://owaspsummit.org/Working-Sessions/Security-Crowdsourcing/Internal-Bug-Bounties-Programmes.html). Converse com os Champions e juntos decidam qual formato é o mais adequado para vocês. Não importa qual formato você escolherá, este é provavelmente o ponto mais importante em todo o Manual. Mantenha-os motivados e você ficará agradavelmente surpreso em breve!
 
 ## Torneios e concursos
 Deixe os Champions praticarem desafios emocionantes por meio de concursos e hackathons. Um CTF interno trimestral pode ser facilmente configurado usando [CTFd](https://github.com/CTFd/CTFd), ou você pode escolher um evento externo no [CTF Time](https://ctftime.org/). Os Hacking days também podem ser interessantes, seja para encontrar ou corrigir vulnerabilidades.
@@ -11,7 +11,7 @@ Não subestime o poder dos SWAGs para aumentar as taxas de engajamento!
 
 
 ## Boletins regulares
-Compartilhe as últimas notícias de segurança por meio de canais de comunicação estabelecidos (como [Ezine weekly appsec compilations](https://github.com/Simpsonpt/AppSecEzine)). Além disso, comece a divulgar boletins de segurança mensais com atualizações dos membros da equipe, planos, reconhecimentos por bom trabalho e qualquer outra informação relevante e interessante - isso não só ira elvolver ainda mais os Champions, mas será um bom checkpoint.
+Compartilhe as últimas notícias de segurança por meio de canais de comunicação estabelecidos (como [Ezine weekly appsec compilations](https://github.com/Simpsonpt/AppSecEzine)). Além disso, comece a divulgar boletins de segurança mensais com atualizações dos membros da equipe, planos, reconhecimentos por bom trabalho e qualquer outra informação relevante e interessante - isso não só ira envolver ainda mais os Champions, mas será um bom checkpoint.
 
 
 ## Espaço do Security Champions
